Fixed z-index issue with menu.  adjusted padding on blue butttons, finished styling footer.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -118,7 +118,6 @@ button:disabled {
 
 .nav-toggle-label {
   position: fixed;
-  z-index: 9;
   top: 1rem;
   right: .75rem;
   cursor: pointer; }
@@ -136,6 +135,7 @@ button:disabled {
   display: flex;
   visibility: hidden;
   position: fixed;
+  z-index: 9;
   top: 0;
   right: 0;
   bottom: 0;
@@ -148,17 +148,25 @@ button:disabled {
   list-style-type: none;
   transition: .2s all linear;
   opacity: 0;
-  background-color: rgba(62, 72, 82, 0.5);
+  background-color: rgba(62, 72, 82, 0.8);
   font-size: 2rem;
   text-align: center; }
   .menu li {
     margin-bottom: 1.5em;
     font-weight: bold;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    display: inline-block; }
     .menu li a {
-      border-bottom: 2px solid #000;
-      color: #000;
+      transition: all ease 0.8s;
+      animation: moveInRight 1.5s ease-out;
+      animation-delay: -1s;
+      border-bottom: 2px solid #f2f2f2;
+      color: #f2f2f2;
       text-decoration: none; }
+    .menu li a:hover {
+      padding: 2rem;
+      box-shadow: inset 200px 0 0 0 #e0e0e0;
+      color: #010; }
 
 .nav-toggle-label--active span {
   opacity: 0; }
@@ -237,7 +245,7 @@ button:disabled {
   display: inline-block;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 1rem 2rem;
   transition: all 0.2s;
   background-color: #a2e1f5;
   text-align: center; }
@@ -324,16 +332,28 @@ button:disabled {
 .footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 100px;
   background-color: #3e4852;
   color: #f2f2f2;
-  font-size: 1.4rem; }
+  font-size: 1.2rem;
+  text-align: center; }
   .footer__branding {
-    padding-left: 2rem; }
+    padding: 0 2rem 1rem 0; }
   .footer__trademark {
     margin: 0;
     padding-right: 2rem; }
+
+@media (min-width: 320px) and (max-width: 766px) {
+  .footer {
+    flex-direction: column; } }
+
+@media (min-width: 767px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between; }
+    .footer__branding {
+      padding-left: 2rem; } }
 
 .dream-car {
   display: grid;
@@ -364,7 +384,7 @@ button:disabled {
 
 .product-display {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   margin: 0;
   padding: 3rem;
   background-color: #f0f3f4; }
@@ -385,6 +405,7 @@ button:disabled {
     font-size: 1.2rem; }
 
 .product-display__images {
+  display: none;
   text-align: center; }
 
 .product-display__images img {
@@ -392,3 +413,9 @@ button:disabled {
   max-width: 40%;
   height: auto;
   padding: 1rem; }
+
+@media (min-width: 767px) {
+  .product-display {
+    grid-template-columns: 1fr 1fr; }
+  .product-display__images {
+    display: inline-block; } }
