--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -28,7 +28,7 @@
     display: inline-block;
     align-items: center;
     justify-content: center;
-    padding: $s-size;
+    padding: $s-size $m-size;
     transition: all 0.2s;
     background-color: #a2e1f5;
     text-align: center;
