--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,19 +1,37 @@
 .footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 100px;
   background-color: $blue-gray;
   color: $text-white;
-  font-size: 1.4rem;
+  font-size: $s-font;
+  text-align: center;
 
   &__branding {
-    padding-left: $m-size;
+    padding: 0 $m-size $s-size 0;
   }
   
   &__trademark {
     margin: 0;
     padding-right: $m-size;
     
+  }
+}
+
+@media (min-width: 320px) and (max-width: 766px) {
+  .footer {
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 767px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+
+    &__branding {
+      padding-left: $m-size;
+    }
   }
 }
