--- a/styles/layout/_product_display.scss
+++ b/styles/layout/_product_display.scss
@@ -1,6 +1,6 @@
 .product-display {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   margin: 0;
   padding: $l-size;
   background-color: #f0f3f4;
@@ -30,6 +30,7 @@
 }
 
 .product-display__images {
+  display: none;
   text-align: center;
 }
 
@@ -38,4 +39,16 @@
   max-width: 40%;
   height: auto;
   padding: $s-size;
+}
+
+@media (min-width: 767px) {
+  .product-display {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .product-display__images {
+    // text-align: center;
+    display: inline-block;
+
+  } 
 }
